--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,9 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<link rel="icon" href="%sveltekit.assets%/favicon-light.svg" media="(prefers-color-scheme: no-preferences)" />
+	<link rel="icon" href="%sveltekit.assets%/favicon-light.svg" media="(prefers-color-scheme: light)" />
+	<link rel="icon" href="%sveltekit.assets%/favicon-dark.svg" media="(prefers-color-scheme: dark)" />
 	<meta name="viewport" content="width=device-width" />
 	%sveltekit.head%
 </head>
