--- a/src/app.html
+++ b/src/app.html
@@ -3,9 +3,8 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon-light.svg" media="(prefers-color-scheme: no-preferences)" />
-	<link rel="icon" href="%sveltekit.assets%/favicon-light.svg" media="(prefers-color-scheme: light)" />
-	<link rel="icon" href="%sveltekit.assets%/favicon-dark.svg" media="(prefers-color-scheme: dark)" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.svg" type="image/svg+xml" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.png" type="image/png" />
 	<meta name="viewport" content="width=device-width" />
 	%sveltekit.head%
 </head>
